add and remove should work now

--- a/cea/default.config
+++ b/cea/default.config
@@ -1675,10 +1675,16 @@ network-geojson-path.extensions = geojson
 network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
 network-geojson-path.category = User-Defined Layout
 
-auto-augment-missing-buildings = true
-auto-augment-missing-buildings.type = BooleanParameter
-auto-augment-missing-buildings.help = Automatically extend user-defined networks when Building Properties/Supply or 'connected-buildings' require additional buildings not present in the user network. When enabled (default), CEA uses Steiner tree optimisation to add missing buildings via shortest street paths. User's existing network edges and nodes are never modified, only extended. When disabled, strict validation raises an error if any buildings are missing.
-auto-augment-missing-buildings.category = User-Defined Layout
+network-layout-mode = validate
+network-layout-mode.type = ChoiceParameter
+network-layout-mode.choices = validate, augment, filter
+network-layout-mode.help = How to handle mismatches between user-defined network and connected buildings: 'validate' (default) - warn about mismatches but use network as-is; 'augment' - add missing buildings to network (union); 'filter' - add missing AND remove extra buildings (exact match to parameter). Requires auto-modify-network=true for augment/filter modes.
+network-layout-mode.category = User-Defined Layout
+
+auto-modify-network = true
+auto-modify-network.type = BooleanParameter
+auto-modify-network.help = Enable automatic network modifications when using augment or filter modes. When true, augment mode adds missing buildings using Steiner tree optimisation; filter mode adds missing AND removes extra buildings using graph cleanup. When false, augment/filter modes will error if modifications are needed. Ignored in validate mode (always non-destructive). User's original network files on disk are never changed.
+auto-modify-network.category = User-Defined Layout
 
 consider-only-buildings-with-demand = true
 consider-only-buildings-with-demand.type = BooleanParameter
