--- a/cea/default.config
+++ b/cea/default.config
@@ -1052,6 +1052,27 @@ substation-heating-systems.choices = ahu, aru, shu, ww
 substation-heating-systems.help = List of heating loads to be supplied (DH mode)
 substation-heating-systems.category = Detailed Model Parameters
 
+[thermal-network-phasing]
+multi-phase-mode = false
+multi-phase-mode.type = BooleanParameter
+multi-phase-mode.help = True if simulating multiple thermal networks in a phased approach.
+
+phasing-plan-name =
+phasing-plan-name.type = StringParameter
+phasing-plan-name.nullable = false
+phasing-plan-name.help = Name for this multi-phase network expansion plan (e.g., 'downtown_2025_2045'). Used to organise results under thermal-network/phasing-plans/{name}/. Use descriptive names to distinguish different expansion scenarios.
+
+sizing-strategy = optimise
+sizing-strategy.type = ChoiceParameter
+sizing-strategy.choices = optimise, size-per-phase, pre-size-all
+sizing-strategy.help = Strategy for sizing pipes across phases: 'optimise' (default) - minimise total NPV by deciding per-pipe whether to pre-size or replace later; 'size-per-phase' - always size for current demand (cheaper upfront, more replacements); 'pre-size-all' - always size for final demand (expensive upfront, no replacements).
+sizing-strategy.category = Phasing Model Settings
+
+phase-completion-year = 2030, 2050, 2075
+phase-completion-year.type = ListParameter
+phase-completion-year.help = Completion year for each phase (comma-separated). Number of years must match number of phases defined in network-names parameter. Example: '2025, 2035, 2045' for 3 phases. Used for NPV calculations and investment timeline.
+phase-completion-year.category = Phasing Model Settings
+
 [thermal-network-optimization]
 network-type = DH
 network-type.type = ChoiceParameter
