--- a/cea/default.config
+++ b/cea/default.config
@@ -948,8 +948,8 @@ meta-output-file.help = Path to the filename of the yml output file.
 
 [thermal-network]
 network-name =
-network-name.type = NetworkLayoutChoiceParameter
-network-name.help = Select an existing network layout to simulate. Networks are created by the 'network-layout' script. Dropdown lists available networks for the selected network type.
+network-name.type = NetworkLayoutMultiChoiceParameter
+network-name.help = Select existing network(s) layout to simulate. Select ONE for single-phase design. Select MULTIPLE in sequence and ensure multi-phase-mode = true for multi-phase design. Networks are created by the 'network-layout' script.
 
 network-type = DH, DC
 network-type.type = MultiChoiceParameter
@@ -1058,20 +1058,21 @@ multi-phase-mode.type = BooleanParameter
 multi-phase-mode.help = True if simulating multiple thermal networks in a phased approach.
 
 phasing-plan-name =
-phasing-plan-name.type = StringParameter
-phasing-plan-name.nullable = false
-phasing-plan-name.help = Name for this multi-phase network expansion plan (e.g., 'downtown_2025_2045'). Used to organise results under thermal-network/phasing-plans/{name}/. Use descriptive names to distinguish different expansion scenarios.
+phasing-plan-name.type = NetworkLayoutNameParameter
+phasing-plan-name.nullable = true
+phasing-plan-name.help = Name for this multi-phase network expansion plan (e.g., 'downtown_2025_2045'). Used to organise results under thermal-network/phasing-plans/{name}/. Use descriptive names to distinguish different expansion scenarios. Only relevant when multi-phase = true.
+phasing-plan-name.category = Phasing Plan Settings
+
+phase-completion-year =
+phase-completion-year.type = ListParameter
+phase-completion-year.help = Completion year for each phase (comma-separated). Number of years must match number of phases defined in network-names parameter. Example: '2025, 2035, 2045' for 3 phases.
+phase-completion-year.category = Phasing Plan Settings
 
 sizing-strategy = optimise
 sizing-strategy.type = ChoiceParameter
 sizing-strategy.choices = optimise, size-per-phase, pre-size-all
 sizing-strategy.help = Strategy for sizing pipes across phases: 'optimise' (default) - minimise total NPV by deciding per-pipe whether to pre-size or replace later; 'size-per-phase' - always size for current demand (cheaper upfront, more replacements); 'pre-size-all' - always size for final demand (expensive upfront, no replacements).
-sizing-strategy.category = Phasing Model Settings
-
-phase-completion-year = 2030, 2050, 2075
-phase-completion-year.type = ListParameter
-phase-completion-year.help = Completion year for each phase (comma-separated). Number of years must match number of phases defined in network-names parameter. Example: '2025, 2035, 2045' for 3 phases. Used for NPV calculations and investment timeline.
-phase-completion-year.category = Phasing Model Settings
+sizing-strategy.category = Phasing Plan Settings
 
 [thermal-network-optimization]
 network-type = DH
