the set up ran through but with a lot of issues

--- a/cea/default.config
+++ b/cea/default.config
@@ -1074,6 +1074,16 @@ sizing-strategy.choices = optimise, size-per-phase, pre-size-all
 sizing-strategy.help = Strategy for sizing pipes across phases: 'optimise' (default) - minimise total NPV by deciding per-pipe whether to pre-size or replace later; 'size-per-phase' - always size for current demand (cheaper upfront, more replacements); 'pre-size-all' - always size for final demand (expensive upfront, no replacements).
 sizing-strategy.category = Phasing Plan Settings
 
+discount-rate = 0.05
+discount-rate.type = RealParameter
+discount-rate.help = Discount rate for NPV calculations (e.g., 0.05 for 5%). Used to calculate present value of future costs when comparing pipe sizing strategies across phases.
+discount-rate.category = Phasing Plan Settings
+
+replacement-cost-multiplier = 1.5
+replacement-cost-multiplier.type = RealParameter
+replacement-cost-multiplier.help = Cost multiplier for pipe replacement (e.g., 1.5 means replacement costs 50% more than initial installation). Accounts for demolition, disposal, and disruption costs.
+replacement-cost-multiplier.category = Phasing Plan Settings
+
 [thermal-network-optimization]
 network-type = DH
 network-type.type = ChoiceParameter
