--- a/cea/default.config
+++ b/cea/default.config
@@ -602,45 +602,45 @@ base-Lifetime.nullable = true
 base-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
 base-Lifetime.category = New Base Properties
 
-window-code =
-window-code.type = ColumnChoiceParameter
-window-code.nullable = true
-window-code.locator = get_database_assemblies_envelope_window
-window-code.column = code
-window-code.help = New window assembly code to apply to the selected archetypes after the event. Leave blank to keep the existing windows.
-window-code.category = New Window Properties
+type-win =
+type-win.type = ColumnChoiceParameter
+type-win.nullable = true
+type-win.locator = get_database_assemblies_envelope_window
+type-win.column = code
+type-win.help = New window assembly code to apply to the selected archetypes after the event. Leave blank to keep the existing windows.
+type-win.category = New Window Properties
 
-supply-heating-code =
-supply-heating-code.type = ColumnChoiceParameter
-supply-heating-code.nullable = true
-supply-heating-code.locator = get_database_assemblies_supply_heating
-supply-heating-code.column = code
-supply-heating-code.help = New supply heating system code to apply to the selected archetypes after the event. Leave blank to keep the existing heating system.
-supply-heating-code.category = New Supply Systems
+supply-type-hs =
+supply-type-hs.type = ColumnChoiceParameter
+supply-type-hs.nullable = true
+supply-type-hs.locator = get_database_assemblies_supply_heating
+supply-type-hs.column = code
+supply-type-hs.help = New supply heating system code to apply to the selected archetypes after the event. Leave blank to keep the existing heating system.
+supply-type-hs.category = New Supply Systems
 
-supply-cooling-code =
-supply-cooling-code.type = ColumnChoiceParameter
-supply-cooling-code.nullable = true
-supply-cooling-code.locator = get_database_assemblies_supply_cooling
-supply-cooling-code.column = code
-supply-cooling-code.help = New supply cooling system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling system.
-supply-cooling-code.category = New Supply Systems
+supply-type-cs =
+supply-type-cs.type = ColumnChoiceParameter
+supply-type-cs.nullable = true
+supply-type-cs.locator = get_database_assemblies_supply_cooling
+supply-type-cs.column = code
+supply-type-cs.help = New supply cooling system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling system.
+supply-type-cs.category = New Supply Systems
 
-supply-hotwater-code =
-supply-hotwater-code.type = ColumnChoiceParameter
-supply-hotwater-code.nullable = true
-supply-hotwater-code.locator = get_database_assemblies_supply_hot_water
-supply-hotwater-code.column = code
-supply-hotwater-code.help = New supply hot water system code to apply to the selected archetypes after the event. Leave blank to keep the existing hot water system.
-supply-hotwater-code.category = New Supply Systems
+supply-type-dhw =
+supply-type-dhw.type = ColumnChoiceParameter
+supply-type-dhw.nullable = true
+supply-type-dhw.locator = get_database_assemblies_supply_hot_water
+supply-type-dhw.column = code
+supply-type-dhw.help = New supply hot water system code to apply to the selected archetypes after the event. Leave blank to keep the existing hot water system.
+supply-type-dhw.category = New Supply Systems
 
-supply-electricity-code =
-supply-electricity-code.type = ColumnChoiceParameter
-supply-electricity-code.nullable = true
-supply-electricity-code.locator = get_database_assemblies_supply_electricity
-supply-electricity-code.column = code
-supply-electricity-code.help = New supply electricity system code to apply to the selected archetypes after the event. Leave blank to keep the existing electricity system.
-supply-electricity-code.category = New Supply Systems
+supply-type-el =
+supply-type-el.type = ColumnChoiceParameter
+supply-type-el.nullable = true
+supply-type-el.locator = get_database_assemblies_supply_electricity
+supply-type-el.column = code
+supply-type-el.help = New supply electricity system code to apply to the selected archetypes after the event. Leave blank to keep the existing electricity system.
+supply-type-el.category = New Supply Systems
 
 [district-events-build]
 build-mode = reconcile
