force build all states

--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -294,8 +294,8 @@ Scenario Evolution Planning:
 
       Use this after you have finished defining district events. It can create missing state folders or reconcile existing ones.
     interfaces: [cli, dashboard]
-    module: cea.datamanagement.district_level_states.bake_states
-    parameters: ['general:scenario', district-events-build]
+    module: cea.datamanagement.district_level_states.bake_states_from_log
+    parameters: ['general:scenario']
     input-files:
       - [get_input_folder]
       - [get_zone_geometry]
