adding selection of existing as user defined

--- a/cea/default.config
+++ b/cea/default.config
@@ -1681,22 +1681,29 @@ number-of-components.nullable = true
 number-of-components.help = Expected number of disconnected components in user-provided network (for validation). Leave blank to skip validation and accept any topology. If specified, Part 1 will error if actual component count doesn't match, helping catch unintentional gaps in network topology. Each component will get one plant auto-assigned.
 number-of-components.category = User-Defined Layout
 
+existing-network =
+existing-network.type = NetworkLayoutChoiceParameter
+existing-network.help = Select existing network layout to load or modify.
+existing-network.nullable = true
+existing-network.default-to-none = true
+existing-network.category = User-Defined Layout
+
 edges-shp-path =
-edges-shp-path.type = InputFileParameter
+edges-shp-path.type = UserNetworkInputFileParameter
 edges-shp-path.nullable = true
 edges-shp-path.extensions = shp
 edges-shp-path.help = Path to user-defined edge shapefile. If provided, bypasses automatic layout generation. Must be used with 'user-nodes-shp-path'. Do NOT use with 'user-network-geojson-path' (mutually exclusive).
 edges-shp-path.category = User-Defined Layout
 
 nodes-shp-path =
-nodes-shp-path.type = InputFileParameter
+nodes-shp-path.type = UserNetworkInputFileParameter
 nodes-shp-path.nullable = true
 nodes-shp-path.extensions = shp
 nodes-shp-path.help = Path to user-defined node shapefile. Required attributes: 'building' (str) matching building names, 'type' (str) node type (CONSUMER/PLANT/NONE). If provided, bypasses automatic layout generation. Must be used with 'user-edges-shp-path'. Do NOT use with 'user-network-geojson-path' (mutually exclusive).
 nodes-shp-path.category = User-Defined Layout
 
 network-geojson-path =
-network-geojson-path.type = InputFileParameter
+network-geojson-path.type = UserNetworkInputFileParameter
 network-geojson-path.nullable = true
 network-geojson-path.extensions = geojson
 network-geojson-path.help = Path to user-defined network GeoJSON file with combined nodes (Points) and edges (LineStrings). Node features require 'building' (str) and 'type' (str) attributes. Edge features require 'type_mat' attribute (str). Do NOT use with 'user-edges-shp-path' or 'user-nodes-shp-path' (mutually exclusive).
