allow user to choosde between multiple district timeline variants

--- a/cea/default.config
+++ b/cea/default.config
@@ -458,7 +458,21 @@ grid-decarbonise-target-emission-factor.nullable = True
 grid-decarbonise-target-emission-factor.category = Grid Decarbonisation
 
 [district-events]
-year-of-event = 1900
+existing-timeline-name = 
+existing-timeline-name.type = SubfolderChoiceParameter
+existing-timeline-name.locator = get_district_timeline_container_folder
+existing-timeline-name.kwargs = 
+existing-timeline-name.help = Name of an existing timeline to load events from. 
+    Leave blank to create a new timeline folder, with name specified in the next choice.
+existing-timeline-name.nullable = true
+
+new-timeline-name = 
+new-timeline-name.type = StringParameter
+new-timeline-name.help = Name of a new timeline to create. 
+    Only used if no existing timeline name is provided in the previous choice.
+    This will create a new timeline subfolder under `scenario/district_timeline_events/`.
+
+year-of-event = 
 year-of-event.type = IntegerParameter
 year-of-event.nullable = true
 year-of-event.help = Year when the event takes place.
@@ -635,7 +649,24 @@ supply-type-el.column = code
 supply-type-el.help = New supply electricity system code to apply to the selected archetypes after the event. Leave blank to keep the existing electricity system.
 supply-type-el.category = New Supply Systems
 
+[bake-states]
+existing-timeline-name = 
+existing-timeline-name.type = SubfolderChoiceParameter
+existing-timeline-name.locator = get_district_timeline_container_folder
+existing-timeline-name.kwargs = 
+existing-timeline-name.help = Name of an existing timeline to load events from. 
+    If you want to create a new timeline, first create it using the "Create Event in Timeline" tool.
+existing-timeline-name.nullable = false
+
 [state-simulations]
+existing-timeline-name = 
+existing-timeline-name.type = SubfolderChoiceParameter
+existing-timeline-name.locator = get_district_timeline_container_folder
+existing-timeline-name.kwargs = 
+existing-timeline-name.help = Name of an existing timeline to load events from. 
+    If you want to create a new timeline, first create it using the "Create Event in Timeline" tool.
+existing-timeline-name.nullable = false
+
 simulation-mode = pending
 simulation-mode.type = ChoiceParameter
 simulation-mode.choices = pending, all
