expose emission timeline generation to dashboard

--- a/cea/default.config
+++ b/cea/default.config
@@ -673,7 +673,15 @@ simulation-mode.choices = pending, all
 simulation-mode.help = Which state years to simulate.
     "pending" simulates only years that have not been simulated yet, or where construction changes mean results are out of date.
     "all" simulates every `state_{year}` folder present in `district_timeline_states`.
-simulation-mode.category = District Timeline
+
+[component-change-emission-timeline]
+existing-timeline-name = 
+existing-timeline-name.type = SubfolderChoiceParameter
+existing-timeline-name.locator = get_district_timeline_container_folder
+existing-timeline-name.kwargs = 
+existing-timeline-name.help = Name of an existing timeline to load events from. 
+    If you want to create a new timeline, first create it using the "Create Event in Timeline" tool.
+existing-timeline-name.nullable = false
 
 [extract-reference-case]
 destination = {general:scenario}/../..
