add choice to hange HVAC systems of state scenarios

--- a/cea/default.config
+++ b/cea/default.config
@@ -649,6 +649,46 @@ supply-type-el.column = code
 supply-type-el.help = New supply electricity system code to apply to the selected archetypes after the event. Leave blank to keep the existing electricity system.
 supply-type-el.category = New Supply Systems
 
+hvac-type-hs =
+hvac-type-hs.type = ColumnChoiceParameter
+hvac-type-hs.nullable = true
+hvac-type-hs.locator = get_database_assemblies_hvac_heating
+hvac-type-hs.column = code
+hvac-type-hs.help = New HVAC heating system code to apply to the selected archetypes after the event. Leave blank to keep the existing heating HVAC system.
+hvac-type-hs.category = New HVAC Systems
+
+hvac-type-cs =
+hvac-type-cs.type = ColumnChoiceParameter
+hvac-type-cs.nullable = true
+hvac-type-cs.locator = get_database_assemblies_hvac_cooling
+hvac-type-cs.column = code
+hvac-type-cs.help = New HVAC cooling system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling HVAC system.
+hvac-type-cs.category = New HVAC Systems
+
+hvac-type-dhw =
+hvac-type-dhw.type = ColumnChoiceParameter
+hvac-type-dhw.nullable = true
+hvac-type-dhw.locator = get_database_assemblies_hvac_hot_water
+hvac-type-dhw.column = code
+hvac-type-dhw.help = New HVAC hot water system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling HVAC system.
+hvac-type-dhw.category = New HVAC Systems
+
+hvac-type-ctrl =
+hvac-type-ctrl.type = ColumnChoiceParameter
+hvac-type-ctrl.nullable = true
+hvac-type-ctrl.locator = get_database_assemblies_hvac_controller
+hvac-type-ctrl.column = code
+hvac-type-ctrl.help = New HVAC controller system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling HVAC system.
+hvac-type-ctrl.category = New HVAC Systems
+
+hvac-type-vent =
+hvac-type-vent.type = ColumnChoiceParameter
+hvac-type-vent.nullable = true
+hvac-type-vent.locator = get_database_assemblies_hvac_ventilation
+hvac-type-vent.column = code
+hvac-type-vent.help = New HVAC ventilation system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling HVAC system.
+hvac-type-vent.category = New HVAC Systems
+
 [bake-states]
 existing-timeline-name = 
 existing-timeline-name.type = SubfolderChoiceParameter
