fix errors suggested by automatic review

--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -268,7 +268,7 @@ Thermal Network Design:
 Scenario Evolution Planning:
   - name: district-events
     label: "Part 1: Create Event in Timeline"
-    short_description: Setup district-level construction renovation district-events in timeline
+    short_description: Setup district-level construction renovation events in timeline
     description: |
       This Feature defines district-level construction and renovation events by updating the district timeline log file.
       An event is when a set of buildings (categorized by archetype) changes its construction properties. After the event year, 
@@ -288,7 +288,7 @@ Scenario Evolution Planning:
 
   - name: district-events-build
     label: "Part 2: Bake Scenario Evolution States"
-    short_description: Create or update state-in-time state scenarios from the district timeline log.
+    short_description: Create or update state-in-time scenarios from the district timeline log.
     description: |
       This Feature materialises state-in-time scenarios (`state_{year}` folders) based on the `district_timeline_log.yml`.
 
@@ -321,7 +321,7 @@ Scenario Evolution Planning:
 
   - name: component-change-emission-timeline
     label: "Part 4: Build Emission Timeline"
-    short_description: Create an emission timeline for the selected state evolution Scenario.
+    short_description: Create an emission timeline for the selected state evolution scenario.
     description: |
       This feature reads the component changes across the states of the selected scenario, 
       as well as the simulation result in each state, to create an emission timeline, including 
