Fix parameter references in phasing help text.

--- a/cea/default.config
+++ b/cea/default.config
@@ -1060,12 +1060,12 @@ multi-phase-mode.help = True if simulating multiple thermal networks in a phased
 phasing-plan-name =
 phasing-plan-name.type = NetworkLayoutNameParameter
 phasing-plan-name.nullable = true
-phasing-plan-name.help = Name for this multi-phase network expansion plan (e.g., 'downtown_2025_2045'). Used to organise results under thermal-network/phasing-plans/{name}/. Use descriptive names to distinguish different expansion scenarios. Only relevant when multi-phase = true.
+phasing-plan-name.help = Name for this multi-phase network expansion plan (e.g., 'downtown_2025_2045'). Used to organise results under thermal-network/phasing-plans/{name}/. Use descriptive names to distinguish different expansion scenarios. Only relevant when multi-phase-mode = true.
 phasing-plan-name.category = Phasing Plan Settings
 
 phase-completion-year =
 phase-completion-year.type = ListParameter
-phase-completion-year.help = Completion year for each phase (comma-separated). Number of years must match number of phases defined in network-names parameter. Example: '2025, 2035, 2045' for 3 phases.
+phase-completion-year.help = Completion year for each phase (comma-separated). Number of years must match number of phases defined in network-name parameter. Example: '2025, 2035, 2045' for 3 phases.
 phase-completion-year.category = Phasing Plan Settings
 
 sizing-strategy = optimise
