Make `network-type` parameter a single choice

--- a/cea/default.config
+++ b/cea/default.config
@@ -1053,6 +1053,11 @@ substation-heating-systems.help = List of heating loads to be supplied (DH mode)
 substation-heating-systems.category = Detailed Model Parameters
 
 [thermal-network-phasing]
+network-type = DH
+network-type.type = ChoiceParameter
+network-type.choices = DH, DC
+network-type.help = Type of district network to be simulated: "DH" (district heating) or "DC" (district cooling).
+
 multi-phase-mode = false
 multi-phase-mode.type = BooleanParameter
 multi-phase-mode.help = True if simulating multiple thermal networks in a phased approach.
