Implement atomic changes feature for district timelines (currently doesn't work due to limited Config section's scope)
- Added functionality to define and apply reusable atomic changes in district timelines.
- Introduced new scripts: `district_atomic_changes_define.py` for defining atomic changes and `district_events_apply_changes.py` for applying them to specific years.
- Updated `scripts.yml` to include new steps for selecting timelines, defining atomic changes, and applying them.
- Enhanced `InputLocator` with a method to retrieve the atomic changes file path.
- Created a conflict detection mechanism to prevent overlapping modifications.
- Added comprehensive documentation for atomic changes and user workflows.

--- a/cea/default.config
+++ b/cea/default.config
@@ -457,29 +457,36 @@ grid-decarbonise-target-emission-factor.help = Target emission factor for grid d
 grid-decarbonise-target-emission-factor.nullable = True
 grid-decarbonise-target-emission-factor.category = Grid Decarbonisation
 
-[district-events]
+[district-timeline-select]
 existing-timeline-name = 
 existing-timeline-name.type = SubfolderChoiceParameter
 existing-timeline-name.locator = get_district_timeline_container_folder
 existing-timeline-name.kwargs = 
-existing-timeline-name.help = Name of an existing timeline to load events from. 
-    Leave blank to create a new timeline folder, with name specified in the next choice.
+existing-timeline-name.help = Select an existing timeline to work with. 
+    Leave blank to create a new timeline with the name specified below.
+    IMPORTANT: Save settings after selecting/creating a timeline before proceeding to other steps.
 existing-timeline-name.nullable = true
 
 new-timeline-name = 
 new-timeline-name.type = StringParameter
-new-timeline-name.help = Name of a new timeline to create. 
-    Only used if no existing timeline name is provided in the previous choice.
-    This will create a new timeline subfolder under `scenario/district_timelines/`.
+new-timeline-name.nullable = true
+new-timeline-name.help = Name for a new timeline. Only used if no existing timeline is selected above.
+    After saving, this new timeline will be available for subsequent steps.
 
-year-of-event = 
-year-of-event.type = IntegerParameter
-year-of-event.nullable = true
-year-of-event.help = Year when the event takes place.
+[district-atomic-changes-define]
+atomic-change-name = 
+atomic-change-name.type = StringParameter
+atomic-change-name.help = Unique name for this atomic change (e.g. "upgrade_wall_insulation", "retrofit_windows_2025"). 
+    This name will be used to reference the change when applying it to years.
+
+atomic-change-description = 
+atomic-change-description.type = StringParameter
+atomic-change-description.nullable = true
+atomic-change-description.help = Optional description of what this atomic change does (e.g. "Upgrades wall insulation to modern standards").
 
 archetypes = 
 archetypes.type = ColumnMultiChoiceParameter
-archetypes.help = Archetype(s) that will have new constructions applied after the event.
+archetypes.help = Archetype(s) that will have new constructions applied by this atomic change.
 archetypes.locator = get_database_archetypes_construction_type
 archetypes.column = const_type
 
@@ -522,7 +529,7 @@ wall-thickness-3-m.category = New Wall Properties
 wall-Lifetime =
 wall-Lifetime.type = IntegerParameter
 wall-Lifetime.nullable = true
-wall-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
+wall-Lifetime.help = New lifetime [years] to apply to the selected archetypes.
 wall-Lifetime.category = New Wall Properties
 
 roof-material-name-1 =
@@ -564,8 +571,50 @@ roof-thickness-3-m.category = New Roof Properties
 roof-Lifetime =
 roof-Lifetime.type = IntegerParameter
 roof-Lifetime.nullable = true
-roof-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
+roof-Lifetime.help = New lifetime [years] to apply to the selected archetypes.
 roof-Lifetime.category = New Roof Properties
+
+floor-material-name-1 =
+floor-material-name-1.type = ColumnChoiceParameter
+floor-material-name-1.nullable = true
+floor-material-name-1.locator = get_database_components_materials
+floor-material-name-1.column = name
+floor-material-name-1.help = Name of first material layer for floors (must match materials database). Leave blank to keep the existing material.
+floor-material-name-1.category = New Floor Properties
+floor-thickness-1-m =
+floor-thickness-1-m.type = RealParameter
+floor-thickness-1-m.nullable = true
+floor-thickness-1-m.help = Thickness [m] of first material layer for floors.
+floor-thickness-1-m.category = New Floor Properties
+floor-material-name-2 =
+floor-material-name-2.type = ColumnChoiceParameter
+floor-material-name-2.nullable = true
+floor-material-name-2.locator = get_database_components_materials
+floor-material-name-2.column = name
+floor-material-name-2.help = Name of second material layer for floors (must match materials database). Leave blank to keep the existing material.
+floor-material-name-2.category = New Floor Properties
+floor-thickness-2-m =
+floor-thickness-2-m.type = RealParameter
+floor-thickness-2-m.nullable = true
+floor-thickness-2-m.help = Thickness [m] of second material layer for floors.
+floor-thickness-2-m.category = New Floor Properties
+floor-material-name-3 =
+floor-material-name-3.type = ColumnChoiceParameter
+floor-material-name-3.nullable = true
+floor-material-name-3.locator = get_database_components_materials
+floor-material-name-3.column = name
+floor-material-name-3.help = Name of third material layer for floors (must match materials database). Leave blank to keep the existing material.
+floor-material-name-3.category = New Floor Properties
+floor-thickness-3-m =
+floor-thickness-3-m.type = RealParameter
+floor-thickness-3-m.nullable = true
+floor-thickness-3-m.help = Thickness [m] of third material layer for floors.
+floor-thickness-3-m.category = New Floor Properties
+floor-Lifetime =
+floor-Lifetime.type = IntegerParameter
+floor-Lifetime.nullable = true
+floor-Lifetime.help = New lifetime [years] to apply to the selected archetypes.
+floor-Lifetime.category = New Floor Properties
 
 base-material-name-1 =
 base-material-name-1.type = ColumnChoiceParameter
@@ -606,7 +655,7 @@ base-thickness-3-m.category = New Base Properties
 base-Lifetime =
 base-Lifetime.type = IntegerParameter
 base-Lifetime.nullable = true
-base-Lifetime.help = New lifetime [years] to apply to the selected archetypes after the event.
+base-Lifetime.help = New lifetime [years] to apply to the selected archetypes.
 base-Lifetime.category = New Base Properties
 
 type-win =
@@ -614,7 +663,7 @@ type-win.type = ColumnChoiceParameter
 type-win.nullable = true
 type-win.locator = get_database_assemblies_envelope_window
 type-win.column = code
-type-win.help = New window assembly code to apply to the selected archetypes after the event. Leave blank to keep the existing windows.
+type-win.help = New window assembly code to apply to the selected archetypes. Leave blank to keep the existing windows.
 type-win.category = New Window Properties
 
 supply-type-hs =
@@ -622,31 +671,28 @@ supply-type-hs.type = ColumnChoiceParameter
 supply-type-hs.nullable = true
 supply-type-hs.locator = get_database_assemblies_supply_heating
 supply-type-hs.column = code
-supply-type-hs.help = New supply heating system code to apply to the selected archetypes after the event. Leave blank to keep the existing heating system.
+supply-type-hs.help = New supply heating system code to apply to the selected archetypes. Leave blank to keep the existing heating system.
 supply-type-hs.category = New Supply Systems
-
 supply-type-cs =
 supply-type-cs.type = ColumnChoiceParameter
 supply-type-cs.nullable = true
 supply-type-cs.locator = get_database_assemblies_supply_cooling
 supply-type-cs.column = code
-supply-type-cs.help = New supply cooling system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling system.
+supply-type-cs.help = New supply cooling system code to apply to the selected archetypes. Leave blank to keep the existing cooling system.
 supply-type-cs.category = New Supply Systems
-
 supply-type-dhw =
 supply-type-dhw.type = ColumnChoiceParameter
 supply-type-dhw.nullable = true
 supply-type-dhw.locator = get_database_assemblies_supply_hot_water
 supply-type-dhw.column = code
-supply-type-dhw.help = New supply hot water system code to apply to the selected archetypes after the event. Leave blank to keep the existing hot water system.
+supply-type-dhw.help = New supply hot water system code to apply to the selected archetypes. Leave blank to keep the existing hot water system.
 supply-type-dhw.category = New Supply Systems
-
 supply-type-el =
 supply-type-el.type = ColumnChoiceParameter
 supply-type-el.nullable = true
 supply-type-el.locator = get_database_assemblies_supply_electricity
 supply-type-el.column = code
-supply-type-el.help = New supply electricity system code to apply to the selected archetypes after the event. Leave blank to keep the existing electricity system.
+supply-type-el.help = New supply electricity system code to apply to the selected archetypes. Leave blank to keep the existing electricity system.
 supply-type-el.category = New Supply Systems
 
 hvac-type-hs =
@@ -654,48 +700,60 @@ hvac-type-hs.type = ColumnChoiceParameter
 hvac-type-hs.nullable = true
 hvac-type-hs.locator = get_database_assemblies_hvac_heating
 hvac-type-hs.column = code
-hvac-type-hs.help = New HVAC heating system code to apply to the selected archetypes after the event. Leave blank to keep the existing heating HVAC system.
+hvac-type-hs.help = New HVAC heating system code to apply to the selected archetypes. Leave blank to keep the existing heating HVAC system.
 hvac-type-hs.category = New HVAC Systems
-
 hvac-type-cs =
 hvac-type-cs.type = ColumnChoiceParameter
 hvac-type-cs.nullable = true
 hvac-type-cs.locator = get_database_assemblies_hvac_cooling
 hvac-type-cs.column = code
-hvac-type-cs.help = New HVAC cooling system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling HVAC system.
+hvac-type-cs.help = New HVAC cooling system code to apply to the selected archetypes. Leave blank to keep the existing cooling HVAC system.
 hvac-type-cs.category = New HVAC Systems
-
 hvac-type-dhw =
 hvac-type-dhw.type = ColumnChoiceParameter
 hvac-type-dhw.nullable = true
 hvac-type-dhw.locator = get_database_assemblies_hvac_hot_water
 hvac-type-dhw.column = code
-hvac-type-dhw.help = New HVAC hot water system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling HVAC system.
+hvac-type-dhw.help = New HVAC hot water system code to apply to the selected archetypes. Leave blank to keep the existing hot water HVAC system.
 hvac-type-dhw.category = New HVAC Systems
-
 hvac-type-ctrl =
 hvac-type-ctrl.type = ColumnChoiceParameter
 hvac-type-ctrl.nullable = true
 hvac-type-ctrl.locator = get_database_assemblies_hvac_controller
 hvac-type-ctrl.column = code
-hvac-type-ctrl.help = New HVAC controller system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling HVAC system.
+hvac-type-ctrl.help = New HVAC controller system code to apply to the selected archetypes. Leave blank to keep the existing HVAC controller.
 hvac-type-ctrl.category = New HVAC Systems
-
 hvac-type-vent =
 hvac-type-vent.type = ColumnChoiceParameter
 hvac-type-vent.nullable = true
 hvac-type-vent.locator = get_database_assemblies_hvac_ventilation
 hvac-type-vent.column = code
-hvac-type-vent.help = New HVAC ventilation system code to apply to the selected archetypes after the event. Leave blank to keep the existing cooling HVAC system.
+hvac-type-vent.help = New HVAC ventilation system code to apply to the selected archetypes. Leave blank to keep the existing ventilation HVAC system.
 hvac-type-vent.category = New HVAC Systems
+
+[district-events-apply-changes]
+info-message = This step uses the timeline selected in Step 0. If you changed the timeline, save settings there first.
+info-message.type = StringParameter
+info-message.nullable = true
+info-message.help = Reminder: Ensure timeline is set in Step 0 and settings are saved.
+
+year-of-state = 2025
+year-of-state.type = IntegerParameter
+year-of-state.nullable = false
+year-of-state.help = Year when the changes should be applied (e.g. 2025).
+
+atomic-changes = 
+atomic-changes.type = AtomicChangeMultiChoiceParameter
+atomic-changes.help = Select one or more atomic changes to apply to this year. 
+    Changes will be checked for conflicts (e.g. modifying the same field on the same building).
 
 [bake-states]
 existing-timeline-name = 
 existing-timeline-name.type = SubfolderChoiceParameter
 existing-timeline-name.locator = get_district_timeline_container_folder
 existing-timeline-name.kwargs = 
-existing-timeline-name.help = Name of an existing timeline to load events from. 
-    If you want to create a new timeline, first create it using the "Create Event in Timeline" tool.
+existing-timeline-name.help = Name of an existing timeline containing atomic change definitions and applied changes. 
+    First define atomic changes using the "Define Atomic Change" tool, then apply them to years.
 existing-timeline-name.nullable = false
 
 [state-simulations]
