--- a/cea/scripts.yml
+++ b/cea/scripts.yml
@@ -266,20 +266,70 @@ Thermal Network Design:
       - [get_weather_file]
 
 Scenario Evolution Planning:
-  - name: district-events
-    label: "Part 1: Create Event in Timeline"
-    short_description: Setup district-level construction renovation events in timeline
+  - name: district-timeline-select
+    label: "Step 0: Select/Create Timeline"
+    short_description: Select or create a district timeline (SAVE SETTINGS after this step!)
     description: |
-      This Feature defines district-level construction and renovation events by updating the district timeline log file.
-      An event is when a set of buildings (categorized by archetype) changes its construction properties. After the event year, 
-      all buildings of the affected archetypes will have their construction properties updated in the scenario for all subsequent years, until the next event (if any).
-
-      This Feature does **not** create or update `state_{year}` scenario folders. Use the "District States From Log" Feature to materialise state scenarios.
-
-      **[Note]**: Only the input parameters will be updated. If you don't want certain parameters to be changed, keep the fields empty.
+      This Feature allows you to select an existing timeline or create a new one.
+      
+      **IMPORTANT**: After selecting or creating a timeline, you MUST click "Save Settings" 
+      before proceeding to other steps. This ensures that Steps 1-4 reference the correct timeline.
+      
+      **Workflow**:
+      1. **Complete this step first** - Select existing or enter new timeline name
+      2. **Click "Save Settings"** - This saves your timeline selection
+      3. **Proceed to Step 1** - Define atomic changes for this timeline
+      4. If you want to switch timelines later, return to this step, select a different timeline, and save again
     interfaces: [cli, dashboard]
-    module: cea.datamanagement.district_level_states.state_scenario
-    parameters: ['general:scenario', district-events]
+    module: cea.datamanagement.district_timeline_select
+    parameters: ['general:scenario', district-timeline-select]
+
+  - name: district-atomic-changes-define
+    label: "Step 1: Define Atomic Change"
+    short_description: Define reusable atomic changes for the selected timeline
+    description: |
+      This Feature allows you to define reusable atomic changes that can be applied to multiple years.
+      An atomic change is a named modification template (e.g. "upgrade_wall_insulation", "retrofit_hvac_2025") containing construction 
+      property updates that can be applied to selected building archetypes.
+      
+      **Prerequisites**: Complete Step 0 (Select Timeline) and save settings first!
+
+      **Workflow**:
+      1. Define atomic changes with meaningful names using this tool
+      2. Use Step 2 to apply one or more atomic changes to specific years
+      3. Use Step 3 to bake the changes into state scenarios
+      
+      **[Note]**: Only the input parameters will be updated. Leave fields empty to keep the existing material.
+    interfaces: [cli, dashboard]
+    module: cea.datamanagement.district_atomic_changes_define
+    parameters: ['general:scenario', district-atomic-changes-define]
+    input-files:
+      - [get_input_folder]
+      - [get_zone_geometry]
+      - [get_db4_folder]
+      - [get_building_properties_folder]
+
+  - name: district-events-apply-changes
+    label: "Step 2: Apply Atomic Changes to Year"
+    short_description: Apply one or more atomic changes to a specific year
+    description: |
+      This Feature applies predefined atomic changes to a specific year in the district timeline.
+      You can select multiple atomic changes to apply simultaneously - the system will detect and prevent conflicts
+      (e.g. if two changes try to modify the same field on the same building).
+      
+      **Prerequisites**: Complete Step 0 (Select Timeline) and Step 1 (Define Changes) first!
+
+      **Workflow**:
+      1. Define atomic changes using Step 1
+      2. Use this tool to apply selected changes to specific years
+      3. Use Step 3 to bake the changes into state scenarios
+      
+      **Conflict Detection**:
+      If selected atomic changes have conflicting modifications (modifying the same field on the same building),
+      the tool will fail with a clear error message listing the conflicts.
+    interfaces: [cli, dashboard]
+    module: cea.datamanagement.district_events_apply_changes
+    parameters: ['general:scenario', district-events-apply-changes]
     input-files:
       - [get_input_folder]
       - [get_zone_geometry]
@@ -287,12 +337,14 @@ Scenario Evolution Planning:
       - [get_building_properties_folder]
 
   - name: district-events-build
-    label: "Part 2: Bake Scenario Evolution States"
-    short_description: Create or update state-in-time scenarios from the district timeline log.
+    label: "Step 3: Bake Scenario Evolution States"
+    short_description: Create or update state-in-time scenarios from the timeline
     description: |
-      This Feature materialises state-in-time scenarios (`state_{year}` folders) based on the `district_timeline_log.yml`.
+      This Feature materialises state-in-time scenarios (`state_{year}` folders) based on the timeline's `district_timeline_log.yml`.
+      
+      **Prerequisites**: Complete Steps 0-2 (Select Timeline, Define Changes, Apply to Years) first!
 
-      Use this after you have finished defining district events. It can create missing state folders or reconcile existing ones.
+      Use this after you have finished applying atomic changes to years. It creates or reconciles state folders for each year.
     interfaces: [cli, dashboard]
     module: cea.datamanagement.district_level_states.bake_states_from_log
     parameters: ['general:scenario', bake-states]
@@ -303,10 +355,13 @@ Scenario Evolution Planning:
       - [get_building_properties_folder]
 
   - name: state-simulations
-    label: "Part 3: Simulate"
-    short_description: Run simulations for all state-in-time years defined in the district_timeline_states folder.
+    label: "Step 4: Run Simulations"
+    short_description: Run simulations for all state-in-time years
     description: |
-      This Feature runs simulations for all state-in-time years defined in the `district_timeline_states` folder.
+      This Feature runs simulations for all state-in-time years in the selected timeline.
+      
+      **Prerequisites**: Complete Steps 0-3 (Select Timeline, Define Changes, Apply Changes, Bake States) first!
+      
       It runs:
       - Radiation
       - Occupancy-helper
@@ -320,12 +375,16 @@ Scenario Evolution Planning:
     parameters: ['general:scenario', state-simulations]
 
   - name: component-change-emission-timeline
-    label: "Part 4: Build Emission Timeline"
-    short_description: Create an emission timeline for the selected state evolution scenario.
+    label: "Step 5: Build Emission Timeline"
+    short_description: Create emission timeline for the selected state evolution scenario
     description: |
-      This feature reads the component changes across the states of the selected scenario, 
-      as well as the simulation result in each state, to create an emission timeline, including 
-      embodied (component change + lifetime-based renovation) and operational emissions. 
+      This Feature reads component changes and simulation results across all states in the timeline 
+      to create a comprehensive emission timeline, including embodied emissions (component changes + 
+      lifetime-based renovation) and operational emissions.
+      
+      **Prerequisites**: Complete Steps 0-4 (all previous steps including simulations) first!
+      
+      This is the final step that produces the complete lifecycle emissions analysis for your district evolution scenario. 
     interfaces: [cli, dashboard]
     module: cea.analysis.lca.district_material_timeline
     parameters: ['general:scenario', component-change-emission-timeline]
