--- a/cea/default.config
+++ b/cea/default.config
@@ -377,6 +377,11 @@ overheating-warning.type = BooleanParameter
 overheating-warning.help = Set to False to bypass overheating warning.
 overheating-warning.category = Advanced
 
+retain-technical-results = false
+retain-technical-results.type = BooleanParameter
+retain-technical-results.help = True to retain detailed technical results files. Larger disk space usage.
+retain-technical-results.category = Advanced
+
 [costs]
 capital = true
 capital.type = BooleanParameter
