--- a/cea/default.config
+++ b/cea/default.config
@@ -1945,9 +1945,9 @@ min-ratio-as-main-use.category = Filter by building construction time, type and 
 
 
 [plots-demand]
-y-metric-to-plot = grid_electricity_consumption
+y-metric-to-plot =
 y-metric-to-plot.type = MultiChoiceParameter
-y-metric-to-plot.choices = grid_electricity_consumption, enduse_electricity_demand, enduse_cooling_demand, enduse_space_cooling_demand,	enduse_heating_demand, enduse_space_heating_demand,	enduse_dhw_demand
+y-metric-to-plot.choices = enduse_electricity, enduse_space_cooling, enduse_space_heating, enduse_dhw
 y-metric-to-plot.help = Select the metric(s) to plot for the Y-axis.
 
 y-metric-unit = kWh
