--- a/cea/default.config
+++ b/cea/default.config
@@ -369,7 +369,7 @@ overheating-warning.category = Advanced
 
 retain-technical-results = false
 retain-technical-results.type = BooleanParameter
-retain-technical-results.help = True to retain detailed technical results files. Larger disk space usage.
+retain-technical-results.help = True to retain detailed technical results files. Larger disc space usage.
 retain-technical-results.category = Advanced
 
 [costs]
